objects/User__x.object
<CustomObject>
    <fields>
        <fullName>LanguageLocaleKey__c</fullName>
        <externalDeveloperName>LanguageLocaleKey</externalDeveloperName>
        <label>Language</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>en_US</fullName>
                    <label>English</label>
                </value>
                <value>
                    <fullName>de</fullName>
                    <label>German</label>
                </value>
                <value>
                    <fullName>es</fullName>
                    <label>Spanish</label>
                </value>
                <value>
                    <fullName>fr</fullName>
                    <label>French</label>
                </value>
                <value>
                    <fullName>it</fullName>
                    <label>Italian</label>
                </value>
                <value>
                    <fullName>ja</fullName>
                    <label>Japanese</label>
                </value>
                <value>
                    <fullName>sv</fullName>
                    <label>Swedish</label>
                </value>
                <value>
                    <fullName>ko</fullName>
                    <label>Korean</label>
                </value>
                <value>
                    <fullName>zh_TW</fullName>
                    <label>Chinese (Traditional)</label>
                </value>
                <value>
                    <fullName>zh_CN</fullName>
                    <label>Chinese (Simplified)</label>
                </value>
                <value>
                    <fullName>pt_BR</fullName>
                    <label>Portuguese (Brazil)</label>
                </value>
                <value>
                    <fullName>nl_NL</fullName>
                    <label>Dutch</label>
                </value>
                <value>
                    <fullName>da</fullName>
                    <label>Danish</label>
                </value>
                <value>
                    <fullName>th</fullName>
                    <label>Thai</label>
                </value>
                <value>
                    <fullName>fi</fullName>
                    <label>Finnish</label>
                </value>
                <value>
                    <fullName>ru</fullName>
                    <label>Russian</label>
                </value>
                <value>
                    <fullName>es_MX</fullName>
                    <label>Spanish (Mexico)</label>
                </value>
                <value>
                    <fullName>no</fullName>
                    <label>Norwegian</label>
                </value>
                <value>
                    <fullName>hu</fullName>
                    <label>Hungarian</label>
                </value>
                <value>
                    <fullName>pl</fullName>
                    <label>Polish</label>
                </value>
                <value>
                    <fullName>cs</fullName>
                    <label>Czech</label>
                </value>
                <value>
                    <fullName>tr</fullName>
                    <label>Turkish</label>
                </value>
                <value>
                    <fullName>in</fullName>
                    <label>Indonesian</label>
                </value>
                <value>
                    <fullName>ro</fullName>
                    <label>Romanian</label>
                </value>
                <value>
                    <fullName>vi</fullName>
                    <label>Vietnamese</label>
                </value>
                <value>
                    <fullName>uk</fullName>
                    <label>Ukrainian</label>
                </value>
                <value>
                    <fullName>iw</fullName>
                    <label>Hebrew</label>
                </value>
                <value>
                    <fullName>el</fullName>
                    <label>Greek</label>
                </value>
                <value>
                    <fullName>bg</fullName>
                    <label>Bulgarian</label>
                </value>
                <value>
                    <fullName>en_GB</fullName>
                    <label>English (UK)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LastLoginDate__c</fullName>
        <externalDeveloperName>LastLoginDate</externalDeveloperName>
        <label>Last Login</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <externalDeveloperName>LastModifiedById</externalDeveloperName>
        <label>Last Modified By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>Last Modified Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <externalDeveloperName>LastName</externalDeveloperName>
        <label>Last Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastPasswordChangeDate__c</fullName>
        <externalDeveloperName>LastPasswordChangeDate</externalDeveloperName>
        <label>Last Password Change or Reset</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastReferencedDate__c</fullName>
        <externalDeveloperName>LastReferencedDate</externalDeveloperName>
        <label>Last Referenced Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastViewedDate__c</fullName>
        <externalDeveloperName>LastViewedDate</externalDeveloperName>
        <label>Last Viewed Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <externalDeveloperName>Latitude</externalDeveloperName>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LocaleSidKey__c</fullName>
        <externalDeveloperName>LocaleSidKey</externalDeveloperName>
        <label>Locale</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>sq_AL</fullName>
                    <label>Albanian (Albania)</label>
                </value>
                <value>
                    <fullName>ar_DZ</fullName>
                    <label>Arabic (Algeria)</label>
                </value>
                <value>
                    <fullName>ar_BH</fullName>
                    <label>Arabic (Bahrain)</label>
                </value>
                <value>
                    <fullName>ar_EG</fullName>
                    <label>Arabic (Egypt)</label>
                </value>
                <value>
                    <fullName>ar_IQ</fullName>
                    <label>Arabic (Iraq)</label>
                </value>
                <value>
                    <fullName>ar_JO</fullName>
                    <label>Arabic (Jordan)</label>
                </value>
                <value>
                    <fullName>ar_KW</fullName>
                    <label>Arabic (Kuwait)</label>
                </value>
                <value>
                    <fullName>ar_LB</fullName>
                    <label>Arabic (Lebanon)</label>
                </value>
                <value>
                    <fullName>ar_LY</fullName>
                    <label>Arabic (Libya)</label>
                </value>
                <value>
                    <fullName>ar_MA</fullName>
                    <label>Arabic (Morocco)</label>
                </value>
                <value>
                    <fullName>ar_OM</fullName>
                    <label>Arabic (Oman)</label>
                </value>
                <value>
                    <fullName>ar_QA</fullName>
                    <label>Arabic (Qatar)</label>
                </value>
                <value>
                    <fullName>ar_SA</fullName>
                    <label>Arabic (Saudi Arabia)</label>
                </value>
                <value>
                    <fullName>ar_SD</fullName>
                    <label>Arabic (Sudan)</label>
                </value>
                <value>
                    <fullName>ar_SY</fullName>
                    <label>Arabic (Syria)</label>
                </value>
                <value>
                    <fullName>ar_TN</fullName>
                    <label>Arabic (Tunisia)</label>
                </value>
                <value>
                    <fullName>ar_AE</fullName>
                    <label>Arabic (United Arab Emirates)</label>
                </value>
                <value>
                    <fullName>ar_YE</fullName>
                    <label>Arabic (Yemen)</label>
                </value>
                <value>
                    <fullName>hy_AM</fullName>
                    <label>Armenian (Armenia)</label>
                </value>
                <value>
                    <fullName>az_AZ</fullName>
                    <label>Azerbaijani (Azerbaijan)</label>
                </value>
                <value>
                    <fullName>bn_BD</fullName>
                    <label>Bangla (Bangladesh)</label>
                </value>
                <value>
                    <fullName>eu_ES</fullName>
                    <label>Basque (Spain)</label>
                </value>
                <value>
                    <fullName>be_BY</fullName>
                    <label>Belarusian (Belarus)</label>
                </value>
                <value>
                    <fullName>bs_BA</fullName>
                    <label>Bosnian (Bosnia &amp; Herzegovina)</label>
                </value>
                <value>
                    <fullName>bg_BG</fullName>
                    <label>Bulgarian (Bulgaria)</label>
                </value>
                <value>
                    <fullName>my_MM</fullName>
                    <label>Burmese (Myanmar (Burma))</label>
                </value>
                <value>
                    <fullName>ca_ES</fullName>
                    <label>Catalan (Spain)</label>
                </value>
                <value>
                    <fullName>zh_CN_PINYIN</fullName>
                    <label>Chinese (China, Pinyin Ordering)</label>
                </value>
                <value>
                    <fullName>zh_CN_STROKE</fullName>
                    <label>Chinese (China, Stroke Ordering)</label>
                </value>
                <value>
                    <fullName>zh_CN</fullName>
                    <label>Chinese (China)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <externalDeveloperName>Longitude</externalDeveloperName>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ManagerId__c</fullName>
        <externalDeveloperName>ManagerId</externalDeveloperName>
        <label>Manager ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_c__c</fullName>
        <externalDeveloperName>Market__c</externalDeveloperName>
        <label>Market</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0010</fullName>
                    <label>0010 - Clinical</label>
                </value>
                <value>
                    <fullName>0020</fullName>
                    <label>0020 - Industry</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MediumBannerPhotoUrl__c</fullName>
        <externalDeveloperName>MediumBannerPhotoUrl</externalDeveloperName>
        <label>Url for Android banner photo</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MediumPhotoUrl__c</fullName>
        <externalDeveloperName>MediumPhotoUrl</externalDeveloperName>
        <label>Url for medium profile photo</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MiddleName__c</fullName>
        <externalDeveloperName>MiddleName</externalDeveloperName>
        <label>Middle Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobilePhone__c</fullName>
        <externalDeveloperName>MobilePhone</externalDeveloperName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Full Name</label>
        <length>121</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OfflinePdaTrialExpirationDate__c</fullName>
        <externalDeveloperName>OfflinePdaTrialExpirationDate</externalDeveloperName>
        <label>Sales Anywhere Trial Expiration Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OfflineTrialExpirationDate__c</fullName>
        <externalDeveloperName>OfflineTrialExpirationDate</externalDeveloperName>
        <label>Offline Edition Trial Expiration Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OutOfOfficeMessage__c</fullName>
        <externalDeveloperName>OutOfOfficeMessage</externalDeveloperName>
        <label>Out of office message</label>
        <length>40</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Distributor_Requester_c__c</fullName>
        <externalDeveloperName>Partner_Distributor_Requester__c</externalDeveloperName>
        <label>Partner Distributor Requester</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <externalDeveloperName>Phone</externalDeveloperName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PortalRole__c</fullName>
        <externalDeveloperName>PortalRole</externalDeveloperName>
        <label>Portal Role Level</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Worker</fullName>
                    <label>User</label>
                </value>
                <value>
                    <fullName>PersonAccount</fullName>
                    <label>Person Account</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <externalDeveloperName>PostalCode</externalDeveloperName>
        <label>Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfileId__c</fullName>
        <externalDeveloperName>ProfileId</externalDeveloperName>
        <label>Profile ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_User_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Project_User__c</externalDeveloperName>
        <label>Project User</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReceivesAdminInfoEmails__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>ReceivesAdminInfoEmails</externalDeveloperName>
        <label>Admin Info Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReceivesInfoEmails__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>ReceivesInfoEmails</externalDeveloperName>
        <label>Info Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region_c__c</fullName>
        <externalDeveloperName>Region__c</externalDeveloperName>
        <label>Region</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_in_ACT360_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Report_in_ACT360__c</externalDeveloperName>
        <label>Report in ACT360</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SenderEmail__c</fullName>
        <externalDeveloperName>SenderEmail</externalDeveloperName>
        <label>Email Sender Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SenderName__c</fullName>
        <externalDeveloperName>SenderName</externalDeveloperName>
        <label>Email Sender Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Agent_Level_c__c</fullName>
        <externalDeveloperName>Service_Agent_Level__c</externalDeveloperName>
        <label>Service Agent Level</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Level 1</fullName>
                </value>
                <value>
                    <fullName>Level 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Signature__c</fullName>
        <externalDeveloperName>Signature</externalDeveloperName>
        <label>Email Signature</label>
        <length>1333</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SmallBannerPhotoUrl__c</fullName>
        <externalDeveloperName>SmallBannerPhotoUrl</externalDeveloperName>
        <label>Url for IOS banner photo</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SmallPhotoUrl__c</fullName>
        <externalDeveloperName>SmallPhotoUrl</externalDeveloperName>
        <label>Photo</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Start_Date_c__c</fullName>
        <externalDeveloperName>Start_Date__c</externalDeveloperName>
        <label>Start Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <externalDeveloperName>State</externalDeveloperName>
        <label>State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StayInTouchNote__c</fullName>
        <externalDeveloperName>StayInTouchNote</externalDeveloperName>
        <label>Stay-in-Touch Email Note</label>
        <length>512</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>StayInTouchSignature__c</fullName>
        <externalDeveloperName>StayInTouchSignature</externalDeveloperName>
        <label>Stay-in-Touch Email Signature</label>
        <length>512</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>StayInTouchSubject__c</fullName>
        <externalDeveloperName>StayInTouchSubject</externalDeveloperName>
        <label>Stay-in-Touch Email Subject</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <externalDeveloperName>Street</externalDeveloperName>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Subsidiary_c__c</fullName>
        <externalDeveloperName>Subsidiary__c</externalDeveloperName>
        <label>Subsidiary</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>001</fullName>
                    <label>001 - bioMérieux France</label>
                </value>
                <value>
                    <fullName>002</fullName>
                    <label>002 - bioMérieux Italia</label>
                </value>
                <value>
                    <fullName>003</fullName>
                    <label>003 - bioMérieux Germany</label>
                </value>
                <value>
                    <fullName>004</fullName>
                    <label>004 - bioMérieux Spain</label>
                </value>
                <value>
                    <fullName>005</fullName>
                    <label>005 - bioMérieux Belgium</label>
                </value>
                <value>
                    <fullName>006</fullName>
                    <label>006 - bioMérieux Switzerland</label>
                </value>
                <value>
                    <fullName>007</fullName>
                    <label>007 - bioMérieux United Kingdom</label>
                </value>
                <value>
                    <fullName>008</fullName>
                    <label>008 - bioMérieux Portugal</label>
                </value>
                <value>
                    <fullName>009</fullName>
                    <label>009 - bioMérieux Netherlands</label>
                </value>
                <value>
                    <fullName>010</fullName>
                    <label>010 - bioMérieux Poland</label>
                </value>
                <value>
                    <fullName>011</fullName>
                    <label>011 - bioMérieux Austria</label>
                </value>
                <value>
                    <fullName>012</fullName>
                    <label>012 - bioMérieux Ελλάδας</label>
                </value>
                <value>
                    <fullName>013</fullName>
                    <label>013 - bioMérieux Turkey</label>
                </value>
                <value>
                    <fullName>014</fullName>
                    <label>014 - bioMérieux Russia</label>
                </value>
                <value>
                    <fullName>015</fullName>
                    <label>015 - bioMérieux India</label>
                </value>
                <value>
                    <fullName>016</fullName>
                    <label>016 - bioMérieux Norway</label>
                </value>
                <value>
                    <fullName>017</fullName>
                    <label>017 - bioMérieux Denmark</label>
                </value>
                <value>
                    <fullName>018</fullName>
                    <label>018 - bioMérieux Sweden</label>
                </value>
                <value>
                    <fullName>019</fullName>
                    <label>019 - bioMérieux Finland</label>
                </value>
                <value>
                    <fullName>021</fullName>
                    <label>021 - bioMérieux United States</label>
                </value>
                <value>
                    <fullName>022</fullName>
                    <label>022 - bioMérieux Canada</label>
                </value>
                <value>
                    <fullName>023</fullName>
                    <label>023 - bioMérieux Mexico</label>
                </value>
                <value>
                    <fullName>031</fullName>
                    <label>031 - Sysmex bioMérieux Japan</label>
                </value>
                <value>
                    <fullName>032</fullName>
                    <label>032 - bioMérieux China HK</label>
                </value>
                <value>
                    <fullName>033</fullName>
                    <label>033 - bioMérieux Australia</label>
                </value>
                <value>
                    <fullName>034</fullName>
                    <label>034 - bioMérieux Korea</label>
                </value>
                <value>
                    <fullName>035</fullName>
                    <label>035 - bioMérieux Thailand</label>
                </value>
                <value>
                    <fullName>037</fullName>
                    <label>037 - bioMérieux Singapore</label>
                </value>
                <value>
                    <fullName>040</fullName>
                    <label>040 - bMx Singapore Rep Office Indonesia</label>
                </value>
                <value>
                    <fullName>041</fullName>
                    <label>041 - bioMérieux Brazil</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <externalDeveloperName>Suffix</externalDeveloperName>
        <label>Suffix</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <externalDeveloperName>SystemModstamp</externalDeveloperName>
        <label>System Modstamp</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tech_ContactID_c__c</fullName>
        <externalDeveloperName>Tech_ContactID__c</externalDeveloperName>
        <label>Tech_ContactID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_ContactName_c__c</fullName>
        <externalDeveloperName>Tech_ContactName__c</externalDeveloperName>
        <label>Tech_ContactName</label>
        <length>50</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_PartnerCommunityURL_c__c</fullName>
        <externalDeveloperName>Tech_PartnerCommunityURL__c</externalDeveloperName>
        <label>Tech_PartnerCommunityURL</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TimeZoneSidKey__c</fullName>
        <externalDeveloperName>TimeZoneSidKey</externalDeveloperName>
        <label>Time Zone</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pacific/Kiritimati</fullName>
                    <label>(GMT+14:00) Line Islands Time (Pacific/Kiritimati)</label>
                </value>
                <value>
                    <fullName>Pacific/Enderbury</fullName>
                    <label>(GMT+13:00) Phoenix Islands Time (Pacific/Enderbury)</label>
                </value>
                <value>
                    <fullName>Pacific/Tongatapu</fullName>
                    <label>(GMT+13:00) Tonga Standard Time (Pacific/Tongatapu)</label>
                </value>
                <value>
                    <fullName>Pacific/Chatham</fullName>
                    <label>(GMT+12:45) Chatham Standard Time (Pacific/Chatham)</label>
                </value>
                <value>
                    <fullName>Asia/Kamchatka</fullName>
                    <label>(GMT+12:00) Petropavlovsk-Kamchatski Standard Time (Asia/Kamchatka)</label>
                </value>
                <value>
                    <fullName>Pacific/Auckland</fullName>
                    <label>(GMT+12:00) New Zealand Standard Time (Pacific/Auckland)</label>
                </value>
                <value>
                    <fullName>Pacific/Fiji</fullName>
                    <label>(GMT+12:00) Fiji Standard Time (Pacific/Fiji)</label>
                </value>
                <value>
                    <fullName>Pacific/Guadalcanal</fullName>
                    <label>(GMT+11:00) Solomon Islands Time (Pacific/Guadalcanal)</label>
                </value>
                <value>
                    <fullName>Pacific/Norfolk</fullName>
                    <label>(GMT+11:00) Norfolk Island Time (Pacific/Norfolk)</label>
                </value>
                <value>
                    <fullName>Australia/Lord_Howe</fullName>
                    <label>(GMT+10:30) Lord Howe Standard Time (Australia/Lord_Howe)</label>
                </value>
                <value>
                    <fullName>Australia/Brisbane</fullName>
                    <label>(GMT+10:00) Australian Eastern Standard Time (Australia/Brisbane)</label>
                </value>
                <value>
                    <fullName>Australia/Sydney</fullName>
                    <label>(GMT+10:00) Australian Eastern Standard Time (Australia/Sydney)</label>
                </value>
                <value>
                    <fullName>Australia/Adelaide</fullName>
                    <label>(GMT+09:30) Australian Central Standard Time (Australia/Adelaide)</label>
                </value>
                <value>
                    <fullName>Australia/Darwin</fullName>
                    <label>(GMT+09:30) Australian Central Standard Time (Australia/Darwin)</label>
                </value>
                <value>
                    <fullName>Asia/Seoul</fullName>
                    <label>(GMT+09:00) Korean Standard Time (Asia/Seoul)</label>
                </value>
                <value>
                    <fullName>Asia/Tokyo</fullName>
                    <label>(GMT+09:00) Japan Standard Time (Asia/Tokyo)</label>
                </value>
                <value>
                    <fullName>Asia/Hong_Kong</fullName>
                    <label>(GMT+08:00) Hong Kong Standard Time (Asia/Hong_Kong)</label>
                </value>
                <value>
                    <fullName>Asia/Kuala_Lumpur</fullName>
                    <label>(GMT+08:00) Malaysia Time (Asia/Kuala_Lumpur)</label>
                </value>
                <value>
                    <fullName>Asia/Manila</fullName>
                    <label>(GMT+08:00) Philippine Standard Time (Asia/Manila)</label>
                </value>
                <value>
                    <fullName>Asia/Shanghai</fullName>
                    <label>(GMT+08:00) China Standard Time (Asia/Shanghai)</label>
                </value>
                <value>
                    <fullName>Asia/Singapore</fullName>
                    <label>(GMT+08:00) Singapore Standard Time (Asia/Singapore)</label>
                </value>
                <value>
                    <fullName>Asia/Taipei</fullName>
                    <label>(GMT+08:00) Taipei Standard Time (Asia/Taipei)</label>
                </value>
                <value>
                    <fullName>Australia/Perth</fullName>
                    <label>(GMT+08:00) Australian Western Standard Time (Australia/Perth)</label>
                </value>
                <value>
                    <fullName>Asia/Bangkok</fullName>
                    <label>(GMT+07:00) Indochina Time (Asia/Bangkok)</label>
                </value>
                <value>
                    <fullName>Asia/Ho_Chi_Minh</fullName>
                    <label>(GMT+07:00) Indochina Time (Asia/Ho_Chi_Minh)</label>
                </value>
                <value>
                    <fullName>Asia/Jakarta</fullName>
                    <label>(GMT+07:00) Western Indonesia Time (Asia/Jakarta)</label>
                </value>
                <value>
                    <fullName>Asia/Rangoon</fullName>
                    <label>(GMT+06:30) Myanmar Time (Asia/Rangoon)</label>
                </value>
                <value>
                    <fullName>Asia/Dhaka</fullName>
                    <label>(GMT+06:00) Bangladesh Standard Time (Asia/Dhaka)</label>
                </value>
                <value>
                    <fullName>Asia/Kathmandu</fullName>
                    <label>(GMT+05:45) Nepal Time (Asia/Kathmandu)</label>
                </value>
                <value>
                    <fullName>Asia/Colombo</fullName>
                    <label>(GMT+05:30) India Standard Time (Asia/Colombo)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <externalDeveloperName>Title</externalDeveloperName>
        <label>Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserCountryCode_c__c</fullName>
        <externalDeveloperName>UserCountryCode__c</externalDeveloperName>
        <label>User Country Code</label>
        <length>250</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPermissionsAvantgoUser__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPermissionsAvantgoUser</externalDeveloperName>
        <label>AvantGo User</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPermissionsCallCenterAutoLogin__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPermissionsCallCenterAutoLogin</externalDeveloperName>
        <label>Auto-login To Call Center</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPermissionsChatterAnswersUser__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPermissionsChatterAnswersUser</externalDeveloperName>
        <label>Chatter Answers User</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPermissionsInteractionUser__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPermissionsInteractionUser</externalDeveloperName>
        <label>Flow User</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
</CustomObject>